@@ -39,6 +39,7 @@
     <link rel="stylesheet" href="/styles/protograph/schema-alignment-dialog.css" />
     
     <script type="text/javascript" src="externals/jquery-1.4.2.min.js"></script>
+    <script type="text/javascript" src="externals/jquery.cookie.js"></script>
     <script type="text/javascript" src="externals/suggest/suggest-1.2.min.js"></script>
     <script type="text/javascript" src="externals/jquery-ui/jquery-ui-1.8.custom.min.js"></script>
     <script type="text/javascript" src="externals/imgareaselect/jquery.imgareaselect.js"></script>
