@@ -20,6 +20,7 @@ Fixes:
 - Issue 14: "Limiting Freebase load to starred records"
   We load whatever rows that are filtered through, not particularly starred rows.
 - Issue 49: "Add Edit Cells / Set Null"
+- Issue 30: "Transform dialog should remember preferred language."
 
 Features:
 - Row/record sorting (Issue 32)
